bug fixes, added tests